--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 {
   "imports": {
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0"
+    "react-dom/": "https://esm.sh/react-dom@18.3.1/",
+    "react/": "https://esm.sh/react@18.3.1/",
+    "react": "https://esm.sh/react@18.3.1",
+    "i18next": "https://esm.sh/i18next@23.11.5",
+    "react-i18next": "https://esm.sh/react-i18next@14.1.2"
   }
 }
 </script>
